# ReverseTale

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ReverseTale.sln  config.h.cmake
ReverseTale/: ReverseTale.vcxproj  main.cpp
ReverseTale_Headless/: ReverseTale_Headless.sln
ReverseTale_Headless/ReverseTale_Headless/: ReverseTale_Headless.vcxproj  ReverseTale_Headless.vcxproj.filters  main.cpp
bot/: CMakeLists.txt
bot/src/: main.cpp
cmake/Patches/: 01-inih-cmake.patch  02-inih-has_key.patch  03-libbson.patch  04-mongoc.patch  05-mongocxx.patch  06-mongocxx.patch  07-libbson.patch
dep/: CMakeLists.txt
headless/: CMakeLists.txt  default.conf.example
headless/src/: main.cpp
server/: CMakeLists.txt
server/Game/: CMakeLists.txt
server/Game/src/: client.cpp  client.h  main.cpp
server/Login/: CMakeLists.txt
server/Login/src/: asyncwork.h  client.cpp  client.h  main.cpp
server/Parsing/: CharacterSelection.txt  Ingame.txt  Parsing.md
server/common/: CMakeLists.txt
server/common/src/: ReverseTale.h  asyncwork.h  database.cpp  database.h  reactor.cpp  reactor.h  threadpool.cpp  threadpool.h
server/src/: main.cpp
